correction du overflow

--- a/client/src/app/components/chat/chat.component.scss
+++ b/client/src/app/components/chat/chat.component.scss
@@ -3,9 +3,14 @@
     border-radius: 5%;
     height: 100%;
     width: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    justify-content: flex-end;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
     #message-box {
         background-color: white;
