--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -53,7 +53,9 @@
         }
 
         #chat-container {
+            max-height: 300px;
             flex-basis: 90%;
+            overflow-y: auto;
         }
     }
 }
