--- a/client/src/app/pages/host-game-page/host-game-page.component.scss
+++ b/client/src/app/pages/host-game-page/host-game-page.component.scss
@@ -65,7 +65,9 @@
         }
 
         #chat-container {
+            max-height: 350px;
             flex-basis: 90%;
+            overflow-y: auto;
         }
     }
 }
